syntax = "proto3";
package toxicflow;

service ToxicFlow {
  rpc OrderFlowImbalance (Empty) returns (stream BucketResponse);
}

message Empty {}

message BucketResponse {
  string test = 1;
}
